[package]
name = "magicalane"
version = "0.1.0"
authors = ["magicalne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "magicalane"
path = "src/main.rs"

[dependencies]
bytes = "1"
err-derive = "0.2.3"
libc = "0.2.69"
mio = "0.6"
quinn = "0.6.1"
quinn-proto = "0.6.1"
rustls = { version = "0.18.0", features = ["quic"], optional = true }
tracing = "0.1.10"
tracing-appender = "0.1"
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
futures = "0.3.1"
futures-util = "0.3"
futures-core = "0.3.5"
tokio = { version = "^1.2.0", features = ["full"] }
webpki = { version = "0.21", optional = true }
anyhow = "1.0.22"
thiserror = "1.0"
crc = "1.8.1"
bencher = "0.1.5"
directories-next = "1.0.1"
directories = "2.0"
rand = "0.7"
rcgen = "0.8"
structopt = "0.3.0"
unwrap = "1.2.1"
url = "2"
hyper = "0.13"
byteorder = "1.3.4"
nom = "5.1"
pin-project = "1.0"
nix = "0.18.0"