[package]
name = "magicalane"
version = "0.1.0"
authors = ["magicalne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "magicalane"
path = "src/main.rs"

[dependencies]
bytes = "1"
libc = "0.2.69"
quinn = "0.7.0"
quinn-proto = "0.7.0"
rustls = { version = "0.18.0", features = ["quic"], optional = true }
log = "0.4.14"
env_logger = "0.9.0"
tracing = "0.1.10"
tracing-log = "0.1.2"
tracing-appender = "0.1"
tracing-subscriber = { version = "0.2.5", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
tokio-trace = { version = "0.1", features = ["log"] }
futures = "0.3.1"
tokio-util = { version = "0.6.7", features = ["full"] }
futures-core = "0.3.5"
tokio = { version = "^1.2.0", features = ["full"] }
webpki = { version = "0.21", optional = true }
anyhow = "1.0.22"
thiserror = "1.0"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
bencher = "0.1.5"
directories-next = "1.0.1"
directories = "2.0"
rand = "0.7"
rcgen = "0.8"
structopt = "0.3.0"
pin-project = "1.0.7"
socket2 = "0.4.0"